# am-market

./: .dockerignore  .env  .env.secrets  .env.template  .gitignore  CI_ARCHITECTURE.md  Dockerfile.base-flutter  Dockerfile.base-java-maven  Dockerfile.base-python  README.md  build_error.txt  build_error_utf8.txt  deploy_config.json  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run_market_data_local.ps1  task.md
DOCUMENTATION/: Changes.md
am-market-data/: .env  (+17 more)
am-market-sdk/python-market-sdk/: .gitlab-ci.yml  .travis.yml  README.md  ci-trigger.txt  pyproject.toml  setup.py  tox.ini
am-market-sdk/python-market-sdk/am_market_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
am-market-sdk/python-market-sdk/docs/: Audit.md  AuditData.md  BrokerageCalculationRequest.md  BrokerageCalculationResponse.md  BrokerageCalculatorApi.md  CookieInfo.md  CookieScraperControllerApi.md  HistoricalData.md  HistoricalDataMetadata.md  HistoricalDataRequest.md  HistoricalDataResponseV1.md  IndexMetadata.md  IndicesApi.md  IngestionJobLog.md  InstrumentManagementApi.md  InstrumentSearchCriteria.md  MarginCalculationRequest.md  MarginCalculationResponse.md  MarginCalculatorApi.md  MarketAnalyticsApi.md  MarketDataAdminControllerApi.md  MarketDataApi.md  MarketDataStreamApi.md  MarketDataUpdate.md  OHLCRequest.md  OHLCVTPoint.md  Position.md  PositionMargin.md  QuoteChange.md  QuotesRequest.md  SecurityDocument.md  SecurityExplorerApi.md  SecurityKey.md  SecurityMetadata.md  SecuritySearchRequest.md  StockData.md  StockIndicesMarketData.md  StreamConnectRequest.md  StreamConnectResponse.md  WebsiteCookies.md
am-market-sdk/python-market-sdk/test/: test_audit.py  test_audit_data.py  test_brokerage_calculation_request.py  test_brokerage_calculation_response.py  test_brokerage_calculator_api.py  test_cookie_info.py  test_cookie_scraper_controller_api.py  test_historical_data.py  test_historical_data_metadata.py  test_historical_data_request.py  test_historical_data_response_v1.py  test_index_metadata.py  test_indices_api.py  test_ingestion_job_log.py  test_instrument_management_api.py  test_instrument_search_criteria.py  test_margin_calculation_request.py  test_margin_calculation_response.py  test_margin_calculator_api.py  test_market_analytics_api.py  test_market_data_admin_controller_api.py  test_market_data_api.py  test_market_data_stream_api.py  test_market_data_update.py  test_ohlc_request.py  test_ohlcvt_point.py  test_position.py  test_position_margin.py  test_quote_change.py  test_quotes_request.py  test_security_document.py  test_security_explorer_api.py  test_security_key.py  test_security_metadata.py  test_security_search_request.py  test_stock_data.py  test_stock_indices_market_data.py  test_stream_connect_request.py  test_stream_connect_response.py  test_website_cookies.py
am-market-sdk/python-parser-sdk/: .gitlab-ci.yml  .travis.yml  README.md  ci-trigger.txt  pyproject.toml  setup.py  tox.ini
am-market-sdk/python-parser-sdk/am_parser_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
am-market-sdk/python-parser-sdk/docs/: BackgroundJobsApi.md  DefaultApi.md  ETFHoldingsApi.md  FileListResponse.md  FileType.md  FileUpload.md  HTTPValidationError.md  JobProgress.md  JobResponse.md  JobStatus.md  JobStatusResponse.md  MutualFundsApi.md  ProcessingStatus.md  ValidationError.md  ValidationErrorLocInner.md
(+1276 files in other folders)
