[project]
name = "am-market"
version = "0.1.0"
description = "AM Portfolio Market Management"
authors = [{ name = "Antigravity Agent", email = "agent@google.com" }]
requires-python = ">=3.11"
dependencies = [
    "uvicorn (>=0.41.0,<0.42.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "requests (>=2.32.0)",
    "python-dotenv (>=1.0.1)",
    "pandas (>=2.0.0)",
    "pydantic (>=2.0.0)",
    "python-multipart (>=0.0.9)",
    "openpyxl (>=3.1.2)",
    "pyyaml (>=6.0.1)",
    "pydantic-settings (>=2.1.0)",
    "motor (>=3.3.2)",
    "together (>=1.0.0)",
    "httpx (>=0.25.2)"
]

[tool.poetry]
packages = [
    { include = "scripts" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.scripts]
all = "scripts.run_local:run_all"
market = "scripts.run_local:run_market"
build = "scripts.run_local:build_market"
parser = "scripts.run_local:run_parser"
analysis = "scripts.run_local:run_analysis"
ui = "scripts.run_local:run_ui"
deploy-all = "scripts.deploy_local:main"
