[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "am-market-client"
version = "1.0.0"
description = "AM Market Data API Python Client"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "AM Portfolio Team", email = "support@amportfolio.com" }
]
keywords = ["OpenAPI", "OpenAPI-Generator", "am-market-client", "AM-Portfolio"]
dependencies = [
    "urllib3 >= 1.25.3",
    "python-dateutil",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["am_market_client*"]
