[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "am-parser-client"
version = "1.0.0"
description = "AM Parser API Python Client"
requires-python = ">=3.7"
dependencies = [
    "urllib3 >= 1.25.3",
    "python-dateutil",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["am_parser_client*"]
